kubernetes/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: 748735308412.dkr.ecr.us-west-2.amazonaws.com/server:latest
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  #type: LoadBalancer
  selector:
      app: server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      #nodePort: 30100
